new settings.py and .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
 triptailorenv/
-basesite/
+basesite/settings_sensitive.py
 manage.py
 __pycache__/
 db.sqlite3
-<<<<<<< HEAD
 .vscode/
-=======
-.vscode/
->>>>>>> da2ae40e673dada716c3deeb8a77b00b73c3d93c
+venv/
